# Discord_Template

./: .env.dist  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 112b3920fcd1_v1.py  9772235bfb11_.py  fc2047725b64_.py
app/: __init__.py  bot.py  main.py
app/adapters/: adapters.py  postgres.py  redis.py
app/controllers/bot/: __init__.py  base.py  rating.py  system.py  wallet.py
app/core/: config.py  ioc.py
app/core/exception/: __init__.py  base.py  transaction.py  user.py
app/models/: __init__.py  base.py  transaction.py  user.py  wallet.py
app/repositories/postgres/: __init__.py  base.py  transaction.py  user.py  wallet.py
app/repositories/redis/: transaction.py  wallet.py
app/usecases/: transaction.py  usecases.py  user.py  wallet.py
app/utils/: buffer.py
bot/: README.md  __init__.py  __main__.py
bot/cogs/: __init__.py  abc.py
bot/cogs/admin/: wallet.py
bot/cogs/developer/: __init__.py  app_commands.py  cogs.py
bot/cogs/user/: __init__.py  wallet.py
bot/core/: __init__.py  db.py  settings.py  sign.py  startup.py
bot/database/: __init__.py  database.py
bot/database/models/: __init__.py  base.py  user.py
bot/database/repositories/: __init__.py  abc.py  user.py
bot/models/: base.py  user.py
bot/repositories/: abc.py  user.py
bot/types/: __init__.py  unix.py
