[tool.poetry]
name = "discord-template"
version = "0.1.0"
description = ""
authors = ["Selix <asel1x@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlmodel = "^0.0.19"
discord = "^2.3.2"
alembic = "^1.13.2"
loguru = "^0.7.2"
pydantic-settings = "^2.3.4"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
